--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -10,7 +10,7 @@
   .logo {
     position: absolute;
     width: 13rem;
-   left: 10px;
+    left: 10px;
     top: 50%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
@@ -20,5 +20,28 @@
     display: block;
     width: 100%;
     margin: 0;
+  }
+  .callToActions {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  ul,
+  li {
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    list-style-type: none;
+    a {
+      font-size: 1.8rem;
+      line-height: 1;
+      color: black;
+      text-decoration: none;
+      text-transform: uppercase;
+    }
   }
 }
