email and password auth using firebase

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -36,6 +36,11 @@
   }
   li {
     list-style-type: none;
+    margin-right: 1.5rem;
+    display: inline-block;
+    &:last-child {
+      margin-right: 0;
+    }
     a {
       font-size: 1.8rem;
       line-height: 1;
